--- a/public/control.html
+++ b/public/control.html
@@ -36,7 +36,8 @@
 				<div class="page page1">
 					<p class="title">PAGINA 1</p>
 					<div class="text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi egestas mi mi, ac maximus ante ultricies nec. Sed molestie sed ligula eu consequat. Maecenas ultricies, eros sed tempus viverra, turpis velit rhoncus neque, in tincidunt nunc magna quis ligula. Ut diam augue, auctor nec sagittis sit amet, pretium non tortor. Maecenas tempus mi sed orci finibus, sit amet commodo eros luctus. Nam consectetur aliquet condimentum.</p>
+						<p>La presentación</p>
+						<p>Aquí irían datos de soporte que SOLO va a ver  DFT (Un chancuco)</p>
 					</div>
 				</div>
 			</section>
@@ -45,7 +46,8 @@
 				<div class="page page2">
 					<p class="title">PAGINA 2</p>
 					<div class="text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi egestas mi mi, ac maximus ante ultricies nec. Sed molestie sed ligula eu consequat. Maecenas ultricies, eros sed tempus viverra, turpis velit rhoncus neque, in tincidunt nunc magna quis ligula. Ut diam augue, auctor nec sagittis sit amet, pretium non tortor. Maecenas tempus mi sed orci finibus, sit amet commodo eros luctus. Nam consectetur aliquet condimentum.</p>
+						<p>La introducción</p>
+						<p>Aquí irían datos de soporte que SOLO va a ver  DFT (Un chancuco)</p>
 					</div>
 				</div>
 			</section>
@@ -54,7 +56,8 @@
 				<div class="page page3">
 					<p class="title">PAGINA 3</p>
 					<div class="text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi egestas mi mi, ac maximus ante ultricies nec. Sed molestie sed ligula eu consequat. Maecenas ultricies, eros sed tempus viverra, turpis velit rhoncus neque, in tincidunt nunc magna quis ligula. Ut diam augue, auctor nec sagittis sit amet, pretium non tortor. Maecenas tempus mi sed orci finibus, sit amet commodo eros luctus. Nam consectetur aliquet condimentum.</p>
+						<p>La encuesta</p>
+						<p>Aquí irían datos de soporte que SOLO va a ver  DFT (Un chancuco)</p>
 					</div>
 				</div>
 			</section>
@@ -62,21 +65,32 @@
 			<section>
 				<section data-background="assets/img/4.jpg"><div class="page page4">
 					<p class="title">PAGINA 4</p>
+					<p>Las estadísticas</p>
 					<div class="text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi egestas mi mi, ac maximus ante ultricies nec. Sed molestie sed ligula eu consequat. Maecenas ultricies, eros sed tempus viverra, turpis velit rhoncus neque, in tincidunt nunc magna quis ligula. Ut diam augue, auctor nec sagittis sit amet, pretium non tortor. Maecenas tempus mi sed orci finibus, sit amet commodo eros luctus. Nam consectetur aliquet condimentum.</p>
+						<p>Aquí irían datos de soporte que SOLO va a ver  DFT (Un chancuco)</p>
 					</div>
 
 				</div></section>
+				
+			</section>
+
+			<section>
 				<section data-background="assets/img/5.jpg"><div class="page page5">
 					<p class="title">PAGINA 5</p>
 					<div class="text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi egestas mi mi, ac maximus ante ultricies nec. Sed molestie sed ligula eu consequat. Maecenas ultricies, eros sed tempus viverra, turpis velit rhoncus neque, in tincidunt nunc magna quis ligula. Ut diam augue, auctor nec sagittis sit amet, pretium non tortor. Maecenas tempus mi sed orci finibus, sit amet commodo eros luctus. Nam consectetur aliquet condimentum.</p>
+						<p>La frase</p>
+						<p>Aquí irían datos de soporte que SOLO va a ver  DFT (Un chancuco)</p>
 					</div>
 				</div></section>
-			</section>
+				<section data-background="assets/img/5.jpg"><div class="page page5">
+					<p class="title">PAGINA 6</p>
+					<div class="text">
+						<p>El video</p>
+						<p>Aquí irían datos de soporte que SOLO va a ver  DFT (Un chancuco)</p>
+					</div>
 
-			<section data-background="assets/img/5.jpg">
-				<button id="playButton">Play Video</button>
+					<button id="playButton">Play Video</button>
+				</div></section>
 			</section>
 		</div>
 	</div>
