--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
 			<section>
 				<img class="pageBg" src="assets/img/page12.jpg" alt="">
 				<div class="page" id="page12">
-					<img  id="rappi" src="assets/img/rappi.png">
+					<img  id="rappi" src="assets/img/Rappi.png">
 				</div>
 			</section>
 
