--- a/public/control.html
+++ b/public/control.html
@@ -102,7 +102,7 @@
 			<section >
 				<img class="pageBg" src="assets/img/page12.jpg" alt="">
 				<div class="page" id="page12">
-					<img  id="rappi" src="assets/img/rappi.png">
+					<img  id="rappi" src="assets/img/Rappi.png">
 				</div>
 			</section>
 
@@ -176,6 +176,7 @@
 					<img class="pageBg" src="assets/img/page26.jpg" alt="">
 					<div class="page" id="page20">
 						<button id="votacion">Actvar Votación</button>
+						<button id="mail">Guardar Info</button>
 						<div id="ideaHolder" class="placeHolder">
 							
 						</div>
@@ -206,6 +207,7 @@
 					<img class="pageBg" src="assets/img/page26.jpg" alt="">
 					<div class="page" id="page23">
 						<button id="votacion2">Actvar Votación</button>
+						<button id="mail2">Guardar Info</button>
 						<div id="purposeHolder" class="placeHolder">
 							
 						</div>
