--- a/public/index.html
+++ b/public/index.html
@@ -35,53 +35,53 @@
 		<div class="slides">
 
 			<section>
-				<img class="pageBg" src="assets/img/page1.jpg"> alt=""
+				<img class="pageBg" src="assets/img/page1.jpg" alt="">
 				<div class="page" id="page1"></div>
 			</section>
 
 			<section>
-				<img class="pageBg" src="assets/img/page2.jpg"> alt=""
+				<img class="pageBg" src="assets/img/page2.jpg" alt="">
 				<div class="page" id="page2"></div>
 			</section>
 			
 			<section>
-				<img class="pageBg" src="assets/img/page3.jpg"> alt=""
+				<img class="pageBg" src="assets/img/page3.jpg" alt="">
 				<div class="page" id="page3"></div>
 			</section>
 			
 			<section>
-				<img class="pageBg" src="assets/img/page4.jpg"> alt=""
+				<img class="pageBg" src="assets/img/page4.jpg" alt="">
 				<div class="page" id="page4">
 					<video  id="SimonSinek"	src="assets/video/SimonSinek.mp4"></video>
 				</div>
 			</section>
 			
 			<section>
-				<img class="pageBg" src="assets/img/page5.jpg"> alt=""
+				<img class="pageBg" src="assets/img/page5.jpg" alt="">
 				<div class="page" id="page5"></div>
 			</section>
 
 			<section>
-				<img class="pageBg" src="assets/img/page6.jpg"> alt=""
+				<img class="pageBg" src="assets/img/page6.jpg" alt="">
 				<div class="page" id="page6"></div>
 			</section>
 			
 			<section>
-				<img class="pageBg" src="assets/img/page7.jpg"> alt=""
+				<img class="pageBg" src="assets/img/page7.jpg" alt="">
 				<div class="page" id="page7">
 					<video  id="calzatodo"	src="assets/video/calzatodo.mp4"></video>
 				</div>
 			</section>
 			
 			<section>
-				<img class="pageBg" src="assets/img/page8.jpg"> alt=""
+				<img class="pageBg" src="assets/img/page8.jpg" alt="">
 				<div class="page" id="page8">
 					<video  id="Nintendo"	src="assets/video/Nintendo.mp4"></video>
 				</div>
 			</section>
 
 			<section>
-				<img class="pageBg" src="assets/img/page9.jpg"> alt=""
+				<img class="pageBg" src="assets/img/page9.jpg" alt="">
 				<div class="page" id="page9">
 					<video  id="Netflix"	src="assets/video/Netflix.mp4"></video>
 				</div>
